--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Hello World, we are software developers!</h1>
+    <section id="welcome-section">
+        <h1>WELCOME TO OUR PAGE</h1>
+        <p>this absolutely gud page</p>
+    </section>
+    <section id="projects">
+        <h2>Our pages</h1>
+        <div id="projects_grid">
+            <a href="https://www.merriam-webster.com/dictionary/page">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Blank_page_intentionally_end_of_book.jpg"/>
+                <p id="project-tile">What is page?</p>
+            </a>
+            <a href="https://www.merriam-webster.com/dictionary/page">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Blank_page_intentionally_end_of_book.jpg"/>
+                <p id="project-tile">What is life?</p>
+            </a>
+            <a href="https://www.merriam-webster.com/dictionary/page">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Blank_page_intentionally_end_of_book.jpg"/>
+                <p id="project-tile">What is what?</p>
+            </a>
+        </div>
+    </section>
 </body>
 </html>
