--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+    <nav id="navbar">
+        <ol>
+            <li><a href="#welcome-section">home</a></li>
+            <li><a href="#projects">projects</a></li>
+        </ol>
+    </nav>
     <section id="welcome-section">
         <h1>WELCOME TO OUR PAGE</h1>
         <p>this absolutely gud page</p>
@@ -15,7 +21,7 @@
     <section id="projects">
         <h2>Our pages</h1>
         <div id="projects_grid">
-            <a href="https://www.merriam-webster.com/dictionary/page">
+            <a href="https://github.com/c4m3lion/MicroverseProject_Said-Mohamed ">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Blank_page_intentionally_end_of_book.jpg"/>
                 <p id="project-tile">What is page?</p>
             </a>
